--- a/Site/resources/css/index.css
+++ b/Site/resources/css/index.css
@@ -46,7 +46,8 @@
     left: 0;
     right: 0;
     bottom: 25%;
-    border: 4px inset #1B1B2F;
+    border: 2px inset #1B1B2F;
+    box-shadow: 1px 1px 4px black;
 }
 
 #banner img {
@@ -135,7 +136,8 @@
     color: aliceblue;
     width: 48%;
     height: 47%;
-    filter: drop-shadow(1px 1px 1px black);
+    border-radius: 4px;
+    box-shadow: 2px 2px 8px black;
 }
 
 .box h1 {
