--- a/Site/resources/css/signup.css
+++ b/Site/resources/css/signup.css
@@ -24,17 +24,17 @@ a {
     margin: 15px 0;
 }
 
-.login-page {
+.signup-page {
     margin: 0;
-    top: 120px;
+    top: 80px;
     left: 50%;
     position: absolute;
     text-align: center;
     transform: translateX(-50%);
     background-color: #1F4068;
     border-radius: 10px;
-    width: 400px;
-    height: 500px;
+    width: 500px;
+    height: 600px;
     box-shadow: 1px 1px 10px;
 }
 
@@ -56,9 +56,21 @@ a {
     margin-bottom: 50px;
 }
 
+.box .name input[type = 'text'] {
+    display: inline-block;
+    width: 164px;
+    padding: 14px 12px;
+    margin: 0px 2px;
+    background-color: #294a72;
+    border: 0;
+    border-radius: 5px;
+    font-size: medium;
+    color: aliceblue;
+}
+
 .box input[type = 'text'], .box input[type = 'password'] {
     display: block;
-    width: 320px;
+    width: 360px;
     padding: 14px 12px;
     margin: 14px auto;
     background-color: #294a72;
@@ -73,7 +85,7 @@ a {
     background: #E43F5A;
     color: aliceblue;
     border-radius: 60px;
-    margin-top: 30px;
+    margin-top: 40px;
     width: 280px;
     height: 50px;
     font-size: large;
@@ -84,25 +96,4 @@ a {
 .bt1:hover {
     background: #bc1a35;
     text-decoration: underline;
-}
-
-a {
-    color:darkcyan;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-.forpass {
-    position: relative;
-    top: 5px;
-    font-size: large;
-}
-
-.signup {
-    position: relative;
-    top: 10px;
-    font-size: medium;
 }
